# rnn-cuda

./: .gitignore  CMakeLists.txt  README.md  cuda.hpp  flake.nix  layer.hpp  lstmlayer.cu  lstmlayer.hpp  main.cpp  matrix.cu  matrix.hpp  shell.nix  sigmoidlayer.cu  sigmoidlayer.hpp  tanhlayer.cu  tanhlayer.hpp  test.cu  test.h
common/: CMakeLists.txt
data/: dziady-ascii.txt  dziady.txt  editor.txt  fake.txt  newfile.txt  test.txt
layers/: CCEloss.cu  CCEloss.hpp  CMakeLists.txt  layer.hpp  linearlayer.cu  linearlayer.hpp  lstmlayer.cu  lstmlayer.hpp  sigmoidlayer.cu  sigmoidlayer.hpp  softmax.cu  softmax.hpp  tanhlayer.cu  tanhlayer.hpp
linalg/: CMakeLists.txt  CPUMatrix.cpp  CPUMatrix.hpp  GPUMatrix.cu  GPUMatrix.hpp  common.hpp  matrix.cu  matrix.hpp
loader/: CMakeLists.txt  loader.cpp  loader.hpp
neuralnet/: CMakeLists.txt  recurrent.cu  recurrent.hpp
optimizer/: CMakeLists.txt  rmsprop.cu  rmsprop.hpp  sgd.cu  sgd.hpp
tests/: CMakeLists.txt  layers.cpp  loader.cpp  matrix.cpp
